Feat (content): added new content and styling to the page.

--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
                 </div>
             </div>
     </section>
-
-
-
+    <div class="github-card" data-user="lepture"></div>
+    <script src="https://cdn.jsdelivr.net/gh/lepture/github-cards@latest/jsdelivr/widget.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./assets/js/script.js"></script>
