feat: Fixed some responsivity bugs and added the utopian font-design pattern to the main.css

--- a/index.html
+++ b/index.html
@@ -46,12 +46,10 @@
             </div>
             <div class="containerMain--aboutMe">
                 <div class="aboutMe__div">
-                    <h1 class="tilt-n-move-shaking dynamic-content" data-key="main_section_about_me">Sobre mim.</h1>
+                    <div class="div__h1--tilt">
+                        <h1 class="tilt-n-move-shaking dynamic-content" data-key="main_section_about_me">Sobre mim.</h1>
+                    </div>
                     <p class="dynamic-content" data-key="main_section_about_me_description">
-                        Meu nome é Guilherme, tenho 18 anos e sou um aluno da faculdade de tecnologia (Fatec) de
-                        Presidente
-                        Prudente.
-                        Eu possuo um gosto por front-end, e procuro me desenvolver cada vez mais!
                     </p>
                 </div>
             </div>
@@ -59,8 +57,10 @@
     </section>
     <section id="projetos" class="section--Projects">
 
-        <h1 class="tilt-n-move-shaking dynamic-content" data-key="projects_section_title">Meus Projetos
-        </h1>
+        <div class="div__h1--tilt">
+             <h1 class="tilt-n-move-shaking dynamic-content" data-key="projects_section_title">Meus Projetos
+            </h1>
+         </div>
         <div class="projects">
             <div class="div--project">
                 <div class="swiper mySwiper">
@@ -179,9 +179,10 @@
         <div class="section__div--containerMain">
             <div class="containerMain--aboutMe">
                 <div class="aboutMe__div">
-                    <h1 class="tilt-n-move-shaking dynamic-content" data-key="contact_section_title">Minhas
-                        plataformas!
-                    </h1>
+                    <div class="div__h1--tilt">
+                        <h1 class="tilt-n-move-shaking dynamic-content" data-key="contact_section_title">Minhas plataformas!
+                        </h1>
+                    </div>      
                     <p class="contact-platforms">
                         <a class="dynamic-content" data-key="contact_section_email"> Você pode entrar em contato comigo
                             através do meu e-mail:</a> <a class="link email"
